# electricity-forecasting

./: AEP_hourly.py  README.md  app.py  dev.py  features_creation.py  pyproject.toml  requirements.txt  train.py
electricity-forecasting/: features-dataset.py  functions.py  plots.py  train.py
electricity_forecasting/: functions.py  traintheta.py
model/: config.json  feature_order.json
model/theta forecaster/: theta_forecaster.joblib  theta_meta.txt
python files/: app.py  features_creation.py  train.py  traintheta.py  visualization.py
